@@ -3,10 +3,7 @@ package com.spring.edna.services;
 import com.spring.edna.exception.EdnaException;
 import com.spring.edna.models.dtos.PaginationMetaDTO;
 import com.spring.edna.models.dtos.ClotheSummaryDTO;
-import com.spring.edna.models.entities.Clothe;
-import com.spring.edna.models.entities.ClotheImage;
-import com.spring.edna.models.entities.Store;
-import com.spring.edna.models.entities.StoreImage;
+import com.spring.edna.models.entities.*;
 import com.spring.edna.models.enums.StoreImageType;
 import com.spring.edna.models.mappers.ClotheMapper;
 import com.spring.edna.models.repositories.ClotheRepository;
@@ -14,6 +11,8 @@ import com.spring.edna.models.repositories.StoreRepository;
 import com.spring.edna.models.selectors.ClotheSelector;
 import com.spring.edna.services.presenters.FetchClothesWithFilterPresenter;
 import com.spring.edna.storage.GetImageUrl;
+import com.spring.edna.utils.GetStoreImagesUrls;
+import com.spring.edna.utils.GetStoreImagesUrls.GetStoreImagesUrlsResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
@@ -34,7 +33,10 @@ public class FetchClothesWithFilter {
     @Autowired
     private GetImageUrl getImageUrl;
 
-    public FetchClothesWithFilterPresenter execute(ClotheSelector selector, String customerId) throws EdnaException {
+    @Autowired
+    private GetStoreImagesUrls getStoreImagesUrls;
+
+    public FetchClothesWithFilterPresenter execute(ClotheSelector selector, User subject) throws EdnaException {
         if (!selector.hasPagination()) {
             throw new EdnaException("Missing page index and page limit", HttpStatus.BAD_REQUEST);
         }
@@ -43,26 +45,23 @@ public class FetchClothesWithFilter {
         PageRequest page = PageRequest.of(selector.getPage() - 1, selector.getLimit());
         List<Clothe> clothes = clotheRepository.findAll(selector, page).toList();
 
+        String profileImageUrl = null;
+
         for (Clothe c : clothes) {
             Store store = storeRepository.findById(c.getStore().getId()).orElseThrow(() ->
                     new EdnaException("Store not found.", HttpStatus.BAD_REQUEST)
             );
 
-            List<StoreImage> storeImages = store.getImages().stream()
-                    .filter(i -> i.getType().equals(StoreImageType.PROFILE))
-                    .collect(Collectors.toList());
+            List<StoreImage> profileImage = store.getImages()
+                    .stream()
+                    .filter(image -> image.getType() == StoreImageType.PROFILE)
+                    .toList();
 
-            StoreImage profileImage = storeImages.size() > 0 ? storeImages.get(0) : null;
-            String profileImageUrl = (profileImage != null) ? getImageUrl.execute(profileImage.getUrl()) : null;
+            GetStoreImagesUrlsResponse storeImages = getStoreImagesUrls.execute(profileImage);
 
-            if (storeImages.size() > 0) {
-                storeImages.get(0).setUrl(profileImageUrl);
-            } else {
-                StoreImage storeImage = new StoreImage();
-                storeImage.setUrl(null);
-                storeImages.add(storeImage);
-            }
-            store.setImages(storeImages);
+            profileImageUrl = storeImages.getProfileImageUrl();
+
+            profileImage.get(0).setUrl(profileImageUrl);
 
             List<ClotheImage> clotheImages = c.getImages().stream().limit(1).collect(Collectors.toList());
             if (!clotheImages.isEmpty()) {
